CONTENT_API-113: Implemented to display images at post detail page on admin

--- a/src/client/js/i18n/translations/en.json
+++ b/src/client/js/i18n/translations/en.json
@@ -49,6 +49,7 @@
     "tags": "Tags",
     "comments": "Comments",
     "image": "Image",
+    "images": "Images",
     "enabled": "Enabled",
     "disabled": "Disabled",
     "QuotedFrom": "Quoted from {name}",
