CONTENT_API-109: Implemented to save caption related image of post

--- a/src/client/js/i18n/translations/en.json
+++ b/src/client/js/i18n/translations/en.json
@@ -50,6 +50,7 @@
     "comments": "Comments",
     "image": "Image",
     "images": "Images",
+    "caption": "Caption",
     "enabled": "Enabled",
     "disabled": "Disabled",
     "QuotedFrom": "Quoted from {name}",
