CONTENT_API-105: Implemented to insert image tag at cursor position in body text

--- a/src/client/js/i18n/translations/en.json
+++ b/src/client/js/i18n/translations/en.json
@@ -40,6 +40,7 @@
     "download": "Download",
     "downloadFor": "Download {name}",
     "saveDraft": "Save Draft",
+    "insertOf": "Insert {name}",
     "post": "post",
     "posts": "posts",
     "postsOf": "Posts of {label}",
@@ -50,6 +51,7 @@
     "comments": "Comments",
     "image": "Image",
     "images": "Images",
+    "originalSize": "Original Size",
     "caption": "Caption",
     "enabled": "Enabled",
     "disabled": "Disabled",
@@ -159,7 +161,6 @@
     "PostforDetail": "Post for Detail",
     "title": "Title",
     "body": "Body",
-    "images": "Images",
     "files": "Files",
     "SelectImages": "Select Images",
     "SelectFiles": "Select Files",
