--- a/src/client/js/i18n/translations/ja.json
+++ b/src/client/js/i18n/translations/ja.json
@@ -41,6 +41,7 @@
     "download": "ダウンロード",
     "downloadFor": "{name} をダウンロード",
     "saveDraft": "下書き保存する",
+    "insertOf": "{name} を挿入",
     "post": "投稿",
     "posts": "投稿一覧",
     "postsOf": "{label} の投稿一覧",
@@ -51,6 +52,7 @@
     "comments": "コメント一覧",
     "image": "画像",
     "images": "画像",
+    "originalSize": "オリジナルサイズ",
     "caption": "キャプション",
     "enabled": "有効",
     "disabled": "無効",
@@ -160,7 +162,6 @@
     "PostforDetail": "詳細投稿",
     "title": "タイトル",
     "body": "本文",
-    "images": "写真",
     "files": "ファイル",
     "SelectImages": "写真を選択",
     "SelectFiles": "ファイルを選択",
