CONTENT_API-105: Implemented to copy image tag string on editing by markdown

--- a/src/client/js/i18n/translations/en.json
+++ b/src/client/js/i18n/translations/en.json
@@ -55,6 +55,7 @@
     "caption": "Caption",
     "enabled": "Enabled",
     "disabled": "Disabled",
+    "copy": "Copy",
     "QuotedFrom": "Quoted from {name}",
     "QRCode": "QR code",
     "preview": "Preview",
@@ -130,6 +131,8 @@
     "Do you have an account?": "Do you have an account?",
     "email is not verified": "Your email is not verified. Please check recieved verification mail.",
     "sign in now!!": "sign in now!!",
+    "copied": "Copied",
+    "copyFailed": "Failed to copy",
     "overMaxCountOnUpload": "The maximum number of files that can be uploaded at one time is {max}",
     "overMaxSizeOnUpload": "file over {max} is disable to upload",
     "notAcceptedTypeOnUpload": "File other than {types} is disabled to uploaded",
