--- a/src/client/js/i18n/translations/ja.json
+++ b/src/client/js/i18n/translations/ja.json
@@ -56,6 +56,7 @@
     "caption": "キャプション",
     "enabled": "有効",
     "disabled": "無効",
+    "copy": "コピーする",
     "QuotedFrom": "{name} より引用",
     "QRCode": "QRコード",
     "preview": "プレビュー",
@@ -131,6 +132,8 @@
     "Do you have an account?": "登録済ですか？",
     "email is not verified": "メールアドレスが未確認です。受信した確認メールを確認してください。",
     "sign in now!!": "ログインしてください。",
+    "copied": "コピーしました",
+    "copyFailed": "コピーに失敗しました",
     "overMaxCountOnUpload": "1度にアップロードできるファイル数の上限は {max} です",
     "overMaxSizeOnUpload": "{max} を超えるファイルはアップロードできません",
     "notAcceptedTypeOnUpload": "{types} 以外のファイルはアップロードできません",
