CONTENT_API-116: Implemented to upload document files for frontend

--- a/src/client/js/i18n/translations/en.json
+++ b/src/client/js/i18n/translations/en.json
@@ -51,17 +51,21 @@
     "comments": "Comments",
     "image": "Image",
     "images": "Images",
+    "file": "File",
+    "files": "Files",
     "originalSize": "Original Size",
     "caption": "Caption",
     "enabled": "Enabled",
     "disabled": "Disabled",
     "copy": "Copy",
+    "copyFor": "Copy {target}",
     "QuotedFrom": "Quoted from {name}",
     "QRCode": "QR code",
     "preview": "Preview",
     "AdminUser": "Admin User",
     "extention": "Extention",
     "fileType": "File Type",
+    "dispLabel": "Label",
     "more": "More"
   },
   "msg": {
