--- a/src/client/js/i18n/translations/ja.json
+++ b/src/client/js/i18n/translations/ja.json
@@ -52,17 +52,21 @@
     "comments": "コメント一覧",
     "image": "画像",
     "images": "画像",
+    "file": "ファイル",
+    "files": "ファイル",
     "originalSize": "オリジナルサイズ",
     "caption": "キャプション",
     "enabled": "有効",
     "disabled": "無効",
     "copy": "コピーする",
+    "copyFor": "{target} をコピーする",
     "QuotedFrom": "{name} より引用",
     "QRCode": "QRコード",
     "preview": "プレビュー",
     "AdminUser": "管理ユーザ",
     "extention": "拡張子",
     "fileType": "ファイルの種類",
+    "dispLabel": "表示名",
     "more": "もっと見る"
   },
   "msg": {
