--- a/src/client/js/i18n/translations/en.json
+++ b/src/client/js/i18n/translations/en.json
@@ -33,6 +33,8 @@
     "register": "Register",
     "delete": "Delete",
     "cancel": "Cancel",
+    "add": "Add",
+    "addFor": "Add {target}",
     "publish": "Publish",
     "published": "Published",
     "unpublished": "Unpublished",
@@ -66,6 +68,8 @@
     "extention": "Extention",
     "fileType": "File Type",
     "dispLabel": "Label",
+    "link": "Link",
+    "links": "Links",
     "more": "More"
   },
   "msg": {
