CONTENT_API-140: Implemented CRUD function of PostGroup

--- a/src/client/js/i18n/translations/en.json
+++ b/src/client/js/i18n/translations/en.json
@@ -215,6 +215,7 @@
     "AdminUserSettings": "Admin User Settings",
     "AdminUserManagement": "Admin User Management",
     "AdminPostManagement": "Posts Management",
+    "AdminPostGroupManagement": "Posts Group Management",
     "about": "About"
   },
   "site": {
