--- a/src/client/js/i18n/translations/ja.json
+++ b/src/client/js/i18n/translations/ja.json
@@ -72,6 +72,10 @@
     "dispSetting": "表示設定",
     "link": "リンク",
     "links": "リンク",
+    "list": "一覧",
+    "select": "選択",
+    "selectFor": "{target} を選択する",
+    "close": "閉じる",
     "more": "もっと見る"
   },
   "msg": {
