Improved not to require to set serviceId

--- a/src/client/js/i18n/translations/en.json
+++ b/src/client/js/i18n/translations/en.json
@@ -45,6 +45,7 @@
     "insertOf": "Insert {name}",
     "post": "post",
     "posts": "posts",
+    "latestPosts": "新着投稿",
     "postsOf": "Posts of {label}",
     "category": "Category",
     "categories": "Categories",
