--- a/src/client/js/i18n/translations/ja.json
+++ b/src/client/js/i18n/translations/ja.json
@@ -46,6 +46,7 @@
     "insertOf": "{name} を挿入",
     "post": "投稿",
     "posts": "投稿一覧",
+    "latestPosts": "新着投稿",
     "postsOf": "{label} の投稿一覧",
     "category": "カテゴリ",
     "categories": "カテゴリ一覧",
